# happy-engine

./: .gitattributes  .gitignore  CodingGuidelines.md  ProjectHome.md  README
src/: CMakeLists.txt  EvilInteractive.workspace  HappyCookerV2.bat
src/3thParty/: CMakeLists.cmake  INSTALL.bat  INSTALL_MAC.sh  INSTALL_MINGW.sh  INSTALL_WIN.bat  README  UNINSTALL_MAC.sh  UNINSTALL_WIN.bat
src/3thParty/lib/: HappyThirdParty-d-x64.props  HappyThirdParty-d-x86.props  HappyThirdParty-r-x64.props  HappyThirdParty-r-x86.props
src/3thParty/static/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
src/DevTools/: DebugVisual.py  Install.bat
src/HappyCooker/HappyCookerDll/: HappyCooker.cpp  HappyCooker.h  HappyCookerDll.opensdf  HappyCookerDll.sln  HappyCookerDll.vcxproj  HappyCookerDll.vcxproj.filters  Main.cpp  Main.h  X.cpp  X.h
src/HappyCooker/HappyCookerGUI/: Config.cs  Form1.Designer.cs  Form1.cs  HappyCooker.cs  HappyCookerGUI.csproj  HappyCookerGUI.sln  ListBoxFiller.cs  ListboxFile.cs  Program.cs
src/HappyEngine/: AABB.cpp  AABB.h  Assert.cpp  Assert.h  AssetContainer.cpp  AssetContainer.h  AssetContainerP.cpp  AssetContainerP.h  BinObjLineLoader.cpp  BinObjLineLoader.h  BinObjLoader.cpp  BinObjLoader.h  BinaryStream.cpp  BinaryStream.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  CatmullRomSpline.h  Circle.cpp  Circle.h  Client.cpp  Client.h  Color.cpp  Color.h  Console.cpp  Console.h  ContentManager.cpp  ContentManager.h  ControlsManager.cpp  ControlsManager.h  Deferred3DRenderer.cpp  Deferred3DRenderer.h  Deferred3DRendererSettings.cpp  Deferred3DRendererSettings.h  DrawManager.cpp  DrawManager.h  DrawSettings.cpp  DrawSettings.h  (+163 more)
src/HappyEngine/code/: CIncludeLists.cmake  CMakeLists.cmake  FixedString.cpp  FixedString.h  FixedStringMap.h  GlobalSettings.cpp  GlobalSettings.h  GlobalStringTable.cpp  GlobalStringTable.h  HappyEngine.cpp  HappyEngine.h  HappyFunctions.cpp  HappyFunctions.h  HappyGuid.cpp  HappyGuid.h  HappyHelpers.cpp  HappyHelpers.h  HappyMemory.h  HappyNew.h  HappyPCH.cpp  HappyPCH.h  HappyTargetDefines.h  HappyTypes.cpp  HappyTypes.h  HeFixedStringTable.h  HeFixedStrings.cpp  HeFixedStrings.h  HeString.cpp  HeString.h  MessageBox.cpp  MessageBox.h  OpenGL.cpp  OpenGL.h  RTTI.h  Singleton.cpp  Singleton.h  SlotPContainer.h  StaticDataManager.cpp  StaticDataManager.h  StdAfx.cpp  (+5 more)
src/HappyEngine/code files/: HappyEngine.cpp  HappyNew.h
src/HappyFxEditor/: Debug.hfx
src/HappyFxEditor/HappyFxEditor/: App.xaml  App.xaml.cs  Extensions.cs  FileBrowser.cs  GuiManager.cs  HEConnectionManager.cs  HappyFxEditor.csproj  HappyFxEditor.sln  MainWindow.xaml  MainWindow.xaml.cs  Packet.cs
src/HappyFxEditor/HappyFxTest/: HappyFxTest.sln  HappyFxTest.vcxproj  HappyFxTest.vcxproj.filters
src/HappyFxEditor/ref/: layout.psd
src/HappyJson/: AUTHORS  CMakeIncludeLists.cmake
src/HappyMessageBox/: CMakeIncludeLists.cmake
src/HappyMessageBox/include/: HappyMessageBox.h
src/HappyQtTest/: FlyCamera.cpp  FlyCamera.h  FollowCamera.cpp  FollowCamera.h  HappyQtTest.cpp  HappyQtTest.h  HappyQtTest.qrc  HappyQtTest.sln  HappyQtTest.ui  HappyQtTest.vcxproj  HappyQtTest.vcxproj.filters  MainGame.cpp  MainGame.h  TestObject.cpp  TestObject.h  VertexPNT.h  X.cpp  main.cpp
src/HappyQtTest/data/: settings.ini
src/HappySandBox/: ContentBrowser.ui  HappySandBox.opensdf  HappySandBox.sln  HappySandBox.vcxproj  HappySandBox.vcxproj.filters  HappySandbox.qrc  HappySandbox.ui
src/HappySandBox/code/: ContentBrowser.cpp  ContentBrowser.h  EntityManager.cpp  EntityManager.h  FlyCamera.cpp  FlyCamera.h  HappySandBox.cpp  HappySandBox.h  MainGame.cpp  MainGame.h  ObjectSelecter.cpp  ObjectSelecter.h  SceneInfo.cpp  SceneInfo.h  TransformTools.cpp  TransformTools.h  World.cpp  World.h  X.h  main.cpp
src/HappySandBox/data/: settings.ini
src/HappyTest/: Character.cpp  Character.h  DeferredPreEffect.cpp  DeferredPreEffect.h  FPSGraph.cpp  FPSGraph.h  FlyCamera.cpp  FlyCamera.h  FollowCamera.cpp  FollowCamera.h  GameTimer.cpp  GameTimer.h  GroundPlane.cpp  GroundPlane.h  HappyTest.cbp  HappyTest.depend  HappyTest.layout  HappyTest.sln  HappyTest.vcxproj  HappyTest.vcxproj.filters  MainGame.cpp  MainGame.h  MyClient.cpp  MyClient.h  MyServer.cpp  MyServer.h  PhysicsData.h  TestBullet.cpp  TestBullet.h  TestObject.cpp  TestObject.h  VertexPNT.cpp  VertexPNT.h  X.cpp  X.h  main.cpp
src/HappyTest/data/: settings.ini
src/HappyTests/: CMakeLists.txt  CopyDlls.bat  CopyProjectFiles.bat  HappyTests.sln
src/HappyTests/code/: HappyTestsPCH.cpp  X.cpp  X.h
src/HappyTools/: HappyCookerV2.bat  HappyModelViewer.bat  MakeProjectStructure.bat
src/HappyTools/HappyModelViewer/: CopyDlls.bat  HappyModelViewer.sln
src/HappyTools/HappySandBox/: CMakeLists.txt  ContentBrowser.ui  HappySandBox.sln  HappySandBox.vcxproj  HappySandBox.vcxproj.filters  HappySandbox.qrc  HappySandbox.ui
src/HappyTools/ProjectMaker/: ProjectMaker.sln  ProjectMaker.vcxproj  main.cpp
src/cmakeHelpers/: AddFilterMacro.cmake  CopyHappyRuntime.cmake  PCHSupport_26.cmake  SetCompilerOptions.cmake
src/data/: test.mid
src/data/fonts/: Ubuntu-Regular.binobj
src/data/gui/: main.html  materialEditor.html  messageBox.html  tonemap.html
src/data/materials/: car.hm  car.material  cube.hm  cubeInstanced.material  newMaterial.hm  testScene.hm  testScene2.binobj  testSceneBas.material  theepot.hm  theepot.material  white.hm  white.material
src/data/models/: axis.binobj  car.binobj  cube.binobj  openbox.binobj  testScene.binobj  testScene2.binobj  testScene4.binobj
src/data/physics/: car.pxcv  testScene.pxcc  testScene.pxcv  testScene2.pxcc  testScene2.pxcv
src/data/shaders/: defaultForwardSkinned.shader  shaderTest.shader  testShader.shader  testShader2.shader
src/old/HappyTest/: Character.cpp  Character.h  FlyCamera.cpp  FlyCamera.h  FollowCamera.cpp  FollowCamera.h  HappyTest.sln  HappyTest.vcxproj  HappyTest.vcxproj.filters  MainGame.cpp  MainGame.h  MyClient.cpp  MyClient.h  MyServer.cpp  MyServer.h  PhysicsData.h  TestObject.cpp  X.cpp  (+5 more)
(+1998 files in other folders)
